# nslab

./: README.md  main.py  pyproject.toml
.ipynb_checkpoints/: PowerQ_UG_0225_备份不动-checkpoint.ipynb  pyproject-checkpoint.toml
Program/: AWG_v2.ipynb  DEMO.ipynb  DEMO_v2.ipynb  NSWAVE_Grammar.ipynb  NSWAVE_TEST_improve.ipynb  NSWAVE_v2.ipynb  PowerQ_UG_0225_备份不动.ipynb  Programming Guide Code.ipynb  ~$Q_ProgrammingGuide_EN_v0.2.docx
Program/.ipynb_checkpoints/: AWG_v2-checkpoint.ipynb  DEMO-checkpoint.ipynb  DEMO_v2-checkpoint.ipynb  NSWAVE_TEST_improve-checkpoint.ipynb  NSWAVE_v2-checkpoint.ipynb  PQ-Ztest-checkpoint.ipynb
